# cc-switch-market

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build.sh  plan.md
.github/workflows/: build-release.yml
scripts/: e2e-smoke.sh
src/: admin.rs  api_keys.rs  app_state.rs  auth.rs  config.rs  config_wizard.rs  dashboard.rs  db.rs  error.rs  failure.rs  gateio.rs  ledger.rs  main.rs  maintenance.rs  market_tunnel.rs  object_store.rs  pagination.rs  pricing.rs  process_lock.rs  provider.rs  proxy.rs  rate_limit.rs  router_account.rs  router_client.rs  router_notifications.rs  router_request_logs.rs  scheduling.rs  static_assets.rs  support.rs  topups.rs  types.rs  usage.rs  version.rs
web/: components.json  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  home-ui.tsx  layout.tsx  page.tsx
web/app/admin/: page.tsx  ui.tsx
web/app/board/: page.tsx  ui.tsx
web/app/claim/: page.tsx  ui.tsx
web/app/dashboard/: page.tsx  ui.tsx
web/app/support/: page.tsx  ui.tsx
web/components/: admin-guard.tsx  auth.tsx  chrome.tsx  language-provider.tsx  legacy-redirect.tsx
web/components/charts/: MemphisBarChart.tsx  MemphisLineChart.tsx  MemphisPieChart.tsx  MemphisTooltip.tsx  theme.ts
web/components/shadcn/: dialog.tsx  form.tsx  switch.tsx  tabs.tsx  tooltip.tsx
web/components/ui/: AnnouncementButton.tsx  AnnouncementModal.tsx  Confetti.tsx  DataTable.tsx  EmptyState.tsx  LanguageSwitch.tsx  Logo.tsx  Modal.tsx  (+7 more)
web/lib/: client-api.ts  copy.ts  footer-icons.tsx  i18n.ts  public-config.ts  site-announcements.ts  time.ts
